--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
@@ -84,87 +84,4 @@
   </footer>
 </body>
 
-</html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="index.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Rammetto+One&family=Wendy+One&display=swap" rel="stylesheet">
-  <title>Document</title>
-</head>
-<body>
-  <header class="cabecalho">
-    <nav class="navegacao">
-      <div class="caixa1">
-        <img class="logo" src="logo.svg" alt="logo">
-        <div class="dropdown">
-          <img class="menu" src="tres risquinhos (1).png" alt="menu">
-          <div class="dropdown-content">
-            <a href="http://127.0.0.1:3000/petland/pet.html">Informações</a>
-            <a href="#">Loja</a>
-            <a href="http://127.0.0.1:3000/petland/pet.html">Localização</a>
-          </div>
-        </div>
-      </div>
-      <button class="Botao1" type="button">Agendar Hotel</button>
-    </nav>
-  </header>
-  <main>
-    <article>
-      <section class="botao">
-        <h3 class="c1">Gatos</h3>
-        <h3 class="c2">Cachorros</h3>
-        <h3 class="c3">Brinquedos</h3>
-        <h3 class="c4">Remédios</h3>
-      </section>
-      <section>
-        <form class="barraPesquisa">
-          <button><i><img src="lupa.png" alt="" height="16"></i></button>
-          <input type="text" name="search">
-        </form>
-      </section>
-      <section>
-        <img class="foto" src="imagem.png" alt="">
-      </section>
-      <section>
-        <h2 class="titulo">Produtos</h2>
-      </section>
-      <section class="produto">
-        <img class="f1" src="f1.png" alt="">
-        <img class="f1" src="f2.png" alt="">
-        <img class="f1" src="f3.png" alt="">
-        <img class="f1" src="f4.png" alt="">
-      </section>
-      <section class="produto">
-        <img class="f1" src="f5.png" alt="">
-        <img class="f1" src="f6.png" alt="">
-        <img class="f1" src="f7.png" alt="">
-        <img class="f1" src="f8.png" alt="">
-      </section>
-      <section>
-        <p>Ir para loja</p>
-      </section>
-    </article>
-  </main>
-  <footer class="roda-pe">
-    <h1 class="t1">Sobre nós:</h1>
-    <h2>No Pet Land, garantimos a segurança e o bem-estar de todos os pets e hóspedes, reservando-nos o direito de avaliar a saúde e comportamento dos animais e, se necessário, recusar ou interromper a hospedagem para manter um ambiente harmonioso e seguro.</h2>
-    <h2>hotelpetland00@gmail.com</h2>
-    <h2>17 9968-1004</h2>
-    <nav class="nav">
-      <img src="md_5af2d4cabfdf2-removebg-preview 2.svg" alt="">
-      <h2>hotelpetland_</h2>
-    </nav>
-    <nav class="nav">
-      <img src="sm_5b01251200ff5-removebg-preview 1.svg" alt="">
-      <h2>hotelpetland_</h2>
-    </nav>
-    <div class="caixa8">
-      <img class="logo" src="logo.svg" alt="logo">
-    </div>
-  </footer>
-</body>
 </html>
