--- a/index.html
+++ b/index.html
@@ -53,12 +53,18 @@
         <img class="f1" src="imagens/f2.png" alt="">
         <img class="f1" src="imagens/f3.png" alt="">
         <img class="f1" src="imagens/f4.png" alt="">
-      </section>
-      <section class="produto">
         <img class="f1" src="imagens/f5.png" alt="">
         <img class="f1" src="imagens/f6.png" alt="">
         <img class="f1" src="imagens/f7.png" alt="">
+      </section>
+      <section class="produto">
         <img class="f1" src="imagens/f8.png" alt="">
+        <img class="f1" src="imagens/f9 8.png" alt="">
+        <img class="f1" src="imagens/f10 1.png" alt="">
+        <img class="f1" src="imagens/f11 1.png" alt="">
+        <img class="f1" src="imagens/f12 1.png" alt="">
+        <img class="f1" src="imagens/f13 1.png" alt="">
+        <img class="f1" src="imagens/f14 1.png" alt="">
       </section>
       <section>
         <p>Ir para loja</p>
