--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -66,8 +66,8 @@
         <img class="f1" src="imagens/f13 1.png" alt="">
         <img class="f1" src="imagens/f14 1.png" alt="">
       </section>
-      <section>
-        <p>Ir para loja</p>
+      <section class="botao3">
+        <button class="botao2">Ir para loja</button>
       </section>
     </article>
   </main>
