--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
   <main>
     <article>
       <section class="botao">
-        <h3 class="c1">Gatos</h3>
-        <h3 class="c2">Cachorros</h3>
-        <h3 class="c3">Brinquedos</h3>
-        <h3 class="c4">Remédios</h3>
+        <button onclik="https://hotelpetland.lojaintegrada.com.br/assessorios-pets-23124809"class="c1">Gatos</button>
+        <button class="c2">Cachorros</button>
+        <button class="c3">Brinquedos</button>
+        <button class="c4">Remédios</button>
       </section>
       <section>
         <form class="barraPesquisa">
