--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
         <div class="dropdown">
           <img class="menu" src="imagens/tres risquinhos (1).png" alt="menu">
           <div class="dropdown-content">
-            <a href="http://127.0.0.1:3000/petland/pet.html">Informações</a>
-            <a href="#">Loja</a>
-            <a href="http://127.0.0.1:3000/petland/pet.html">Localização</a>
+            <a href="https://dudareii.github.io/petland/pet.html">Informações</a>
+            <a href="https://hotelpetland.lojaintegrada.com.br/">Loja</a>
+            <a href="https://dudareii.github.io/petland/index.html">Ínicio</a>
+            <a href="https://ivycarreira.github.io/pet_land/">Adotar</a>
+            <a href="https://joaobabos.github.io/perguntas-frequentes/">Notícia</a>
           </div>
         </div>
       </div>
@@ -31,10 +33,10 @@
   <main>
     <article>
       <section class="botao">
-        <button onclik="https://hotelpetland.lojaintegrada.com.br/assessorios-pets-23124809"class="c1">Gatos</button>
-        <button class="c2">Cachorros</button>
-        <button class="c3">Brinquedos</button>
-        <button class="c4">Remédios</button>
+        <a href="https://hotelpetland.lojaintegrada.com.br/assessorios-pets-23124809" class="c1">Gatos</a>
+        <a href="https://hotelpetland.lojaintegrada.com.br/assessorios-pets-23124809" class="c1">Cachorros</a>
+        <a href="https://hotelpetland.lojaintegrada.com.br/brinquedos" class="c1">Brinquedos</a>
+        <a href="https://hotelpetland.lojaintegrada.com.br/medicamentos-23124853" class="c1">Remédios</a>
       </section>
       <section>
         <form class="barraPesquisa">
@@ -67,22 +69,20 @@
         <img class="f1" src="imagens/f14 1.png" alt="">
       </section>
       <section class="botao3">
-        <button class="botao2">Ir para loja</button>
+        <a href="https://hotelpetland.lojaintegrada.com.br/" class="botao2">Ir para loja</a>
       </section>
     </article>
   </main>
   <footer class="roda-pe">
-    <h1 class="t1">Sobre nós:</h1>
+    <h1>Sobre nós:</h1>
     <h2>No Pet Land, garantimos a segurança e o bem-estar de todos os pets e hóspedes, reservando-nos o direito de avaliar a saúde e comportamento dos animais e, se necessário, recusar ou interromper a hospedagem para manter um ambiente harmonioso e seguro.</h2>
     <h2>hotelpetland00@gmail.com</h2>
     <h2>17 9968-1004</h2>
     <nav class="nav">
-      <img src="imagens/md_5af2d4cabfdf2-removebg-preview 2.svg" alt="">
-      <h2>hotelpetland_</h2>
+    <h2>hotelpetland_</h2>
     </nav>
     <nav class="nav">
-      <img src="imagens/sm_5b01251200ff5-removebg-preview 1.svg" alt="">
-      <h2>hotelpetland_</h2>
+     <h2>hotelpetland_</h2>
     </nav>
     <div class="caixa8">
       <img class="logo" src="imagens/logo.svg" alt="logo">
